
	* gameswf/gameswf_xml.cpp (setupStackFrames): Grab nodeValue for
	all elements if there is any.
	* gameswf/gameswf_action.cpp (MATH_WRAP_FUNC): Return an
	as_value.
	(call_method) Needs to check if the method is a NUMBER.
	* gameswf/gameswf_xml.cpp (extractNode): Add some filtering of
	bogus data content (just a CR) that seems to be creeping in from
	libxml. This gets rid of the extraneous "undefined" fields.
	
2005-04-02  Rob Savoye  <rob@bertha.welcomehome.org>

	* configure.ac: Add --disable-xml option to not look for XML or
	use the XML and XMLSocket AS objects. The default is to support
	XML, since it's part of SWF v6.
	* configure: Regenerated.
	* gameswf/gameswf_test_ogl.cpp (main): Ad "-c" option to turn off
	SDL Parachutes, because sometimes we want the core file for
	debugging.
	* gameswf/gameswf_action.cpp: Remove object creation code for new
	AS objects.
	* gameswf/gameswf_xml.cpp (xml_new): Move code from
	gameswf_action.cpp to here so we create new objects correctly using
	constructors.
	* gameswf/gameswf_string.cpp (string_new): Move code from
	gameswf_action.cpp to here so we create new objects correctly using
	constructors.
	* gameswf/gameswf_movie.cpp (moviecliploader_new): Move code from
	gameswf_action.cpp to here so we create new objects correctly using
	constructors.
	* gameswf/gameswf_xmlsocket.cpp (xmlsocket_new):  Move code from
	gameswf_action.cpp to here so we create new objects correctly using
	constructors.
	* gameswf/gameswf_*: Don't use __PRETTY_FUNCTION__, it's GCC
	specific. Instead use __FUNCTION__, which supported with VC++..

2005-04-01  Rob Savoye  <rob@bertha.welcomehome.org>

	* gameswf/gameswf_test_ogl.cpp (key_event): Add trapping ENTER and
	ESCAPE too. These supposedly get turned on by an
	fscommand('trapallkeys', true) somehow.
	* gameswf/gameswf_xml.cpp (xml_load): Don't try to open an XML
	disk file that doesn't exist, or the path is wrong.
	* gameswf/gameswf_xml.cpp: Fix attribute parsing so it works for